--- a/PhotosArchive/App.xaml
+++ b/PhotosArchive/App.xaml
@@ -4,39 +4,15 @@
              xmlns:local="clr-namespace:PhotosArchive"
              xmlns:vm="clr-namespace:PhotosArchive.Locator"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
-
-        <vm:ViewModelsLocator x:Key="Locator"/>
-        <BooleanToVisibilityConverter x:Key="visible"/>
-             
-        <!-- Style bouton -->
-        <Style TargetType="{x:Type Button}" x:Key="btnStyle">
-            <Setter Property="FontSize" Value="13"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Width" Value="80"/>
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Margin" Value="0,5,0,10"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="4" BorderThickness="1" BorderBrush="Black">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="Yellow"/>
-                </Trigger>
-                <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Width" Value="79"/>
-                    <Setter Property="Height" Value="29"/>
-                    <Setter Property="Opacity" Value="0.7"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-
+        <ResourceDictionary>
+            <vm:ViewModelsLocator x:Key="Locator"/>
+            <BooleanToVisibilityConverter x:Key="visible"/>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Dictionnaire/BoutonStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
