--- a/PhotosArchive/Dictionnaire/BoutonStyle.xaml
+++ b/PhotosArchive/Dictionnaire/BoutonStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!-- Style bouton -->
-    <Style TargetType="{x:Type Button}">
+    <Style TargetType="{x:Type Button}" x:Key="btnStyle">
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Width" Value="80"/>
